# MemoryGame

./: .gitignore  LICENSE  Makefile  libnsbmp.c  libnsbmp.h  libsx.h  loadbmp.c  loadbmp.h  log.h  main.c  main.h  readme.txt  utils.c  utils.h
assets/: map.psd
libsx/: Makefile.am  Makefile.in  Makefile.no_auto  button.c  colormap.c  colorsel.c  dialog.c  dialog.h  dirlist.c  draw.c  drawing.c  drawing.h  drawingP.h  freq.c  grabpix.c  libsx.c  libsx_private.h  list.c  menu.c  misc.c  popups.c  resize.c  scrollbar.c  string_entry.c  toggle.c  version.c  xstuff.h
libsx/dialogs/: Makefile.am  Makefile.in  Makefile.no_auto  dialogs.de  dialogs.en  dialogs.fr
